# FastDb

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  main.cpp
.github/workflows/: ci.yml
include/fastdb/: Constants.hpp  Database.hpp  EndianSerializer.hpp  Page.hpp  Page0.hpp
scripts/: install-hooks.sh  pre-commit
src/: Database.cpp  Page.cpp  fastdb_core.cpp
tests/: CMakeLists.txt  placeholder_test.cpp
